--- a/src/app/containers/main/main.component.html
+++ b/src/app/containers/main/main.component.html
@@ -1,2 +1,12 @@
-<h1>Welcome</h1>
+<br>
+<br>
 
+<div class="row">
+    <div class="col-6">
+        <button (click)='getName()' class="btn btn-primary">Start</button>
+    </div>
+
+    <div class="col-6">
+        <h1>Welcome {{ login }}</h1>
+    </div>
+</div>
