--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <div class="container-fluid">
 
-  <nav class="nav nav-pills mt-2 mb-5" style="background-color: #e3f2fd;">
+  <nav class="nav nav-pills mt-2 mb-5">
     <a routerLink="register" routerLinkActive="active" class="nav-item nav-link">register</a>
     <a routerLink="login" routerLinkActive="active" class="nav-item nav-link">login</a>
     <a routerLink="main" routerLinkActive="active" class="nav-item nav-link">main</a>
